test/Fail/Erased-data-4.agda
{-# OPTIONS --erasure #-}

data @0 D : Set where
  c : D

_ : Set
_ = D
