test/Fail/Erased-data-4.err
Erased-data-4.agda:7.5-6: error: [DefinitionIsErased]
Identifier D is declared erased, so it cannot be used here
when checking that the expression D has type Set
